# conv

./: .gitignore  conv.spec  main.py  num.py  readme.md  test1.sh  test2.sh
c++/: CMakeLists.txt  install.sh  main.cpp  test.sh
c++/include/: Num.h
c++/src/: Num.cpp
python/: build.sh  conv.spec  install.sh  main.py  num.py  readme.md  test1.sh  test2.sh
